// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter length 0 1`] = `
<div>
  <small
    class="mb-2 text-gray-700 text-right"
  />
</div>
`;

exports[`Counter length 123 1`] = `
<div>
  <small
    class="mb-2 text-gray-700 text-right"
  >
    123
  </small>
</div>
`;
